--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,9 @@
                             <includedLicense>CDDL 1.0</includedLicense>
                             <includedLicense>CPL 1.0</includedLicense>
                             <includedLicense>EPL 1.0</includedLicense>
+                            <includedLicense>LGPL 3.0</includedLicense>
                             <includedLicense>MIT</includedLicense>
+                            <includedLicense>MPL 2.0</includedLicense>
                             <includedLicense>Public Domain</includedLicense>
 
                             <!-- Some licenses are ignored because they are alternatives to acceptable licenses and the plugin doesn't handle alternate licenses -->
@@ -55,6 +57,7 @@
                             </licenseMerge>
                             <licenseMerge>CPL 1.0|Common Public License Version 1.0</licenseMerge>
                             <licenseMerge>EPL 1.0|Eclipse Public License, Version 1.0</licenseMerge>
+                            <licenseMerge>MIT|MIT License</licenseMerge>
                         </licenseMerges>
                     </configuration>
                 </plugin>
@@ -118,6 +121,16 @@
     </pluginRepositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.seedstack.seed</groupId>
+            <artifactId>seed-core-support-specs</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
